Bug 336904 - Reset action is partially broken
Summary: Reset action is partially broken
Status: RESOLVED FIXED
Alias: None
Product: kronometer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-30 14:02 UTC by Elvis Angelaccio
Modified: 2014-07-04 08:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2014-06-30 14:02:35 UTC
There is a particular sequence of actions after which the reset action doesn't work.

Reproducible: Always

Steps to Reproduce:
1. Start the stopwatch
2. Pause the stopwatch
3. Unpase the stopwatch
4. Reset the stopwatch
Actual Results:  
The stopwatch display digits are not zeros.

Expected Results:  
The stopwatch display digits should all be zeros, since the stopwatch is inactive.
Comment 1 Elvis Angelaccio 2014-07-04 08:51:07 UTC
Git commit 2ddb945e942582b1f2d7b75b1f8ae4502b200f85 by Elvis Angelaccio.
Committed on 04/07/2014 at 08:48.
Pushed by elvisangelaccio into branch 'master'.

Fixed bug 336904 by checking if the elapsed timer is valid before to emit the time() signal.

M  +1    -2    stopwatch.cpp

http://commits.kde.org/kronometer/2ddb945e942582b1f2d7b75b1f8ae4502b200f85