BUG: 336904

Fixed bug 336904 by checking if the elapsed timer is valid before to emit the time() signal.